--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -225,7 +225,7 @@
                                     android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:text=""
-                                    android:textColor="@color/gray_thai"
+                                    android:textColor="?attr/sub_title"
                                     android:textSize="@dimen/font_small" />
 
 
@@ -371,11 +371,11 @@
                         app:tabGravity="fill"
                         app:tabIndicatorColor="@color/description_title_yellow"
                         app:tabMode="fixed"
-                        app:tabSelectedTextColor="@color/white"
-                        app:tabTextColor="?attr/cancel_text_color"
+                        app:tabSelectedTextColor="?attr/tab_selected"
+                        app:tabTextColor="?attr/tab_text_color"
                         app:tabTextAppearance="@style/CusromTabText"/>
                     <ImageView
-                        android:background="@color/description_grey"
+                        android:background="?attr/tab_selected"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         />
