--- a/app/src/main/res/drawable-xhdpi/shimmer_item_border.xml
+++ b/app/src/main/res/drawable-xhdpi/shimmer_item_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/shimmer_color" />
+    <solid android:color="?attr/shimmer_animation_dark" />
     <corners android:radius="@dimen/_4sdp" />
-    <stroke android:color="@color/shimmer_color" />
+    <stroke android:color="?attr/shimmer_animation_dark" />
 </shape>
