--- a/app/src/main/res/drawable/genre_unselected.xml
+++ b/app/src/main/res/drawable/genre_unselected.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="@color/genre_unselected"/>
+    <solid android:color="?attr/genre_item_unselected"/>
     <corners android:radius="20dp"/>
 </shape>
