--- a/app/src/main/res/drawable/rounded_corner_filter_gray.xml
+++ b/app/src/main/res/drawable/rounded_corner_filter_gray.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="@color/grayOne"/>
+    <solid android:color="?attr/filter_genre_bg"/>
     <corners android:radius="20dp"/>
 
 </shape>
