--- a/app/src/main/res/layout/activity_filter_icon.xml
+++ b/app/src/main/res/layout/activity_filter_icon.xml
@@ -44,7 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/genere"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/tab_selected"
                     android:textSize="@dimen/_14sdp"
                     android:fontFamily="@font/sukhumvittadmai_normal"
                     android:layout_marginStart="@dimen/_14sdp"
@@ -56,7 +56,7 @@
                     android:id="@+id/v_genre"
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
-                    android:background="@color/grayOne"
+                    android:background="?attr/tab_text_color"
                     android:layout_marginStart="@dimen/_14sdp"
                     android:layout_marginEnd="@dimen/_14sdp"
                     />
@@ -76,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sort"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/tab_selected"
                     android:textSize="@dimen/_14sdp"
                     android:id="@+id/sort_by"
                     android:fontFamily="@font/sukhumvittadmai_normal"
@@ -87,7 +87,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
-                    android:background="@color/grayOne"
+                    android:background="?attr/tab_text_color"
                     android:layout_marginStart="@dimen/_14sdp"
                     android:layout_marginEnd="@dimen/_14sdp"
                     />
