--- a/app/src/main/res/layout/layout_demo_grid.xml
+++ b/app/src/main/res/layout/layout_demo_grid.xml
@@ -9,7 +9,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/simmer_background">
+        android:background="?attr/shimmer_backgroundColor">
 
         <RelativeLayout
             android:layout_width="0dp"
