--- a/app/src/main/res/layout/shimmer_item1.xml
+++ b/app/src/main/res/layout/shimmer_item1.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="@dimen/_75sdp"
             android:layout_height="@dimen/_75sdp"
-            android:background="?attr/simmer_background"
+            android:background="?attr/shimmer_backgroundColor"
             android:gravity="center"
             android:orientation="vertical">
 
