--- a/app/src/main/res/layout/shimmer_item4.xml
+++ b/app/src/main/res/layout/shimmer_item4.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="@dimen/_90sdp"
         android:layout_height="@dimen/_160sdp"
-        android:background="?attr/simmer_background"
+        android:background="?attr/shimmer_backgroundColor"
         android:orientation="vertical">
 
 
