--- a/app/src/main/res/layout/shimmer_layout_article.xml
+++ b/app/src/main/res/layout/shimmer_layout_article.xml
@@ -8,6 +8,7 @@
         android:id="@+id/rv_shimmer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/shimmer_backgroundColor"
         android:orientation="vertical">
 
         <!-- MOCK Layout (when you are still fetching data) -->
@@ -66,7 +67,7 @@
                                 android:layout_marginStart="0dp"
                                 android:layout_marginTop="0dp"
                                 android:layout_marginEnd="0dp"
-                                android:background="@color/shimmerDark"
+                                android:background="?attr/shimmer_animation_dark"
                                 android:clickable="false"
                                 android:keepScreenOn="true"
                                 app:layout_constraintDimensionRatio="H,16:9"
@@ -95,7 +96,7 @@
                             android:layout_height="@dimen/NontonSize13"
                             android:layout_marginLeft="@dimen/NontonSize20"
                             android:layout_marginRight="@dimen/NontonSize20"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:visibility="gone"
@@ -103,14 +104,14 @@
                             android:layout_height="@dimen/NontonSize8"
                             android:layout_marginTop="@dimen/NontonSize10"
                             android:layout_marginRight="@dimen/NontonSize50"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:visibility="gone"
                             android:layout_width="@dimen/NontonSize150"
                             android:layout_height="@dimen/NontonSize10"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <RelativeLayout
                             android:visibility="gone"
@@ -126,7 +127,7 @@
                                 android:layout_height="@dimen/NontonSize15"
                                 android:layout_alignParentLeft="true"
                                 android:layout_gravity="left|center_vertical"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize60"
@@ -135,7 +136,7 @@
                                 android:layout_gravity="right|center_vertical"
                                 android:layout_marginRight="@dimen/NontonSize30"
 
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                         </RelativeLayout>
 
@@ -151,21 +152,21 @@
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                         </LinearLayout>
 
@@ -206,50 +207,50 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize60"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
 
                     </LinearLayout>
@@ -281,7 +282,7 @@
                         android:layout_width="@dimen/NontonSize150"
                         android:layout_height="@dimen/NontonSize15"
                         android:layout_marginTop="@dimen/NontonSize10"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
 
                 </LinearLayout>
@@ -295,7 +296,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -303,7 +304,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -316,7 +317,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -324,7 +325,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -337,7 +338,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -345,7 +346,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
