--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,7 +10,8 @@
         <RelativeLayout
             android:id="@+id/rl_toolBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="?attr/toolbar_background">
 
 
             <LinearLayout
