--- a/app/src/main/res/drawable/white_circle_bg.xml
+++ b/app/src/main/res/drawable/white_circle_bg.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#ffffff"/>
+        android:color="?attr/tab_selected"/>
     <size
         android:width="90dp"
         android:height="90dp"/>
