--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -73,6 +73,7 @@
         <item>ออกจากคิดส์โหมด</item>
         <item>รายการโปรดของฉัน</item>
         <item>ประวัติการรับชม</item>
+        <item>ดาวน์โหลดของฉัน</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
