--- a/app/src/main/res/layout/detail_watchlist_like_share_view.xml
+++ b/app/src/main/res/layout/detail_watchlist_like_share_view.xml
@@ -156,9 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility='@{isDownloadable &amp;&amp; !isKidsMode? View.VISIBLE : View.GONE,default="gone"}'>
-
-
+                android:visibility="gone">
                 <ImageView
                     android:id="@+id/download_video"
                     android:layout_width="@dimen/watchListWidth"
@@ -166,8 +164,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/NontonSize8"
                     android:contentDescription="TODO"
-                    android:visibility='@{downloadStatus==DownloadStatus.START ? View.VISIBLE : View.GONE, default="gone"}'
-                    app:srcCompat="@drawable/ic_start_download" />
+                    android:visibility='@{downloadStatus==DownloadStatus.START ? View.VISIBLE : View.GONE, default="gone"}'/>
 
                 <me.vipa.app.utils.DownloadProgressBar
                     android:id="@+id/video_downloading"
@@ -254,5 +251,7 @@
 
     </LinearLayout>
 </layout>
-<!--
-    android:visibility='@{isDownloadable ? View.VISIBLE : View.GONE}-->
+    <!--
+   android:visibility='@{isDownloadable ? View.VISIBLE : View.GONE,default="gone"}'  android:id="@+id/downloadm-->
+
+    <!--app:srcCompat="@drawable/ic_start_download"  android:id="@+id/download_video"-->
