--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -75,6 +75,7 @@
         <item>Leave Kids Mode</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
+        <item>My Downloads</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
