--- a/app/src/main/res/layout/no_connection.xml
+++ b/app/src/main/res/layout/no_connection.xml
@@ -18,7 +18,7 @@
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:background="@drawable/ic_wifi_off"
+                android:background="?attr/wifi_background_color"
                 android:contentDescription="@string/image_description" />
 
 
